tests/files/parser_tests/should_fail/005.cmdr
//Fail since statements don't end in semicolons
x = 1
y = 2